# mvgkit

./: .clang-format  .dockerignore  .flake8  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  README.md  pyproject.toml  requirements.in  requirements.txt  setup.cfg  setup.py  setup_dev.bash
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  python-app.yml
apps/: stereo_viewer.py
docs/: main.md
python/mvg/: basic.py  calibration.py  camera.py  dataloader.py  features.py  fundamental.py  grabber.py  homography.py  image_processing.py  log.py  optimization.py  sfm.py  stereo.py
scripts/: feature_extractor.py  feature_matcher.py  intrinsics_calibrator.py  kitti_simple_visualizer.py  run_optical_flow.py
src/: CMakeLists.txt  WORKSPACE  pythonbindings.cc  requirements.txt
src/apps/sfm_map_creator/: BUILD  run.py  ui.py
src/common/: CMakeLists.txt  camera.cc  camera.h  pycamera.h  transformation.h
src/mvg/: BUILD  basic.py  calibration.py  camera.py  features.py  homography.py  image_processing.py  optimization.py  sfm.py  stereo.py  streamer.py
src/mvg/algorithms/: BUILD  optical_flow.py
src/mvg/mapping/: BUILD  frame.py  reconstruction.py  visual_odometry.py
src/mvg/mapping/common/: BUILD  frame.py  reconstruction.py  visual_odometry.py
src/mvg/mapping/mapper/: BUILD  mapper_manager.py  sfm.py
src/mvg/models/: BUILD  kitti.py
src/mvgkit/: CMakeLists.txt  basic.py  calibration.py  camera.py  grabber.py  homography.py  stereo.py  streamer.py
src/mvgkit/algorithms/: CMakeLists.txt  pnp.py  pyalgorithms.cc
src/mvgkit/apps/: stereo_viewer.py  stereo_viewer.ui
src/mvgkit/apps/sfm_map_creator/: run.py  ui.py
src/mvgkit/calibration/: __init__.py
src/mvgkit/common/: CMakeLists.txt  __init__.py  camera.cc  camera.h  camera.py  eigen.h  geometry.cc  geometry.h  json_utils.cc  math.h  pycamera.cc  pygeometry.cc  pytransformation.cc  random.h  ransac.cc  ransac.h  transformation.h  utils.py
src/mvgkit/common/python/: pycamera.h  pycommon.cc  pygeometry.h  pytransformation.h
src/mvgkit/common/tests/: testMath.cc
src/mvgkit/datasets/: kitti.py
src/mvgkit/estimation/: CMakeLists.txt  __init__.py  common.h  eight_point.cc  eight_point.h  fundamental.cc  homography.py  plot.py  pnp.cc  pnp.h  pnp.py  stereo.py
src/mvgkit/estimation/python/: pyestimation.cc  pypnp.h  pystereo.h
src/mvgkit/features/: CMakeLists.txt  __init__.py  features.cc  features.h  keypoint.cc  keypoint.h  orb.cc  orb.h
src/mvgkit/image_processing/: __init__.py
src/mvgkit/io/: CMakeLists.txt  json_utils.h
src/mvgkit/mapping/: CMakeLists.txt  frame.h  frame.py  landmark.cc  mapper_manager.py  pymapping_common.h  reconstruction.py  sfm.py  visual_odometry.py
src/mvgkit/mapping/common/: bundle_adjustment.cc  bundle_adjustment.h  frame.py  landmark.h  reconstruction.h  reconstruction.py  visual_odometry.py
src/mvgkit/mapping/mapper/: mapper_manager.py  sfm.py
src/mvgkit/models/: kitti.py
src/mvgkit/scripts/: feature_extraction_pipeline.py  feature_extractor.py  feature_matcher.py
src/mvgkit/stereo/: CMakeLists.txt  common.cc  common.h  eight_point.cc  eight_point.h  essential.cc  essential.h  fundamental.cc  fundamental.h  plot.py  pystereo.cc  pystereo.h  stereo.py  triangulation.cc  triangulation.h
src/scripts/: BUILD  feature_extractor.py  intrinsics_calibrator.py  kitti_downloader.py  kitti_simple_visualizer.py  naive_sfm.py  run_optical_flow.py
src/tests/: BUILD  CMakeLists.txt  conftest.py  data_fixtures.py  data_model.py  stereo_data_fixtures.py  test_basic.py  test_calibration.py  test_camera.py  test_essential.cc  test_fundamental.cc  test_geometry.cc  test_io.cc  test_math.cc  test_pnp.cc  test_pnp.py  test_stereo.py  test_transformation.cc  test_transformation.py  test_triangulation.cc  utils.cc
src/tests/cpp/: CMakeLists.txt  test_essential.cc  test_fundamental.cc  test_geometry.cc  test_io.cc  test_math.cc  test_pnp.cc  test_stereo_common.cc  test_transformation.cc  test_triangulation.cc  utils.cc  utils.h
src/tests/data/: dummy.json
src/tests/data/fundamental/: meta.json
src/tests/data/stereo/aloe/: meta.json
src/tests/python/: conftest.py  data_fixtures.py  test_basic.py  test_camera.py  test_pnp.py  test_stereo.py  test_transformation.py
tests/: conftest.py  stereo_data_fixtures.py  test_basic.py  test_calibration.py  test_fundamental.py  test_stereo.py
tests/data/stereo/book/: meta.json
tools/: install_dependencies_ubuntu.sh  run_test.py  valgrind_check_pytest.py
