[metadata]
name = mvgkit
version = 0.0.1
author = "Kun Lin"

[options]
package_dir =
packages = find:
python_requires = >= 3.10

[options.packages.find]
where = src
exclude =
    tests
    *.tests
    *.tests.*
    tests.*

[options.entry_points]
console_scripts =
    mvgkit_run_feature_extraction_pipeline = mvgkit.scripts.feature_extraction_pipeline:cli
    mvgkit_extract_features = mvgkit.scripts.feature_extractor:cli
    mvgkit_match_features = mvgkit.scripts.feature_matcher:cli
